data/all_generated_tests/raw_wast_tests/call_indirect_MismanagementofBlockNesting_4250.wast
;; 9. **Test Description:**    Employ `call_indirect` within a block structure that includes mixed `br` and `br_table` instructions to ensure that jumping across multiple nested layers correctly maintains operand stack integrity and control flow.    - **Constraint Checked:** Mixed branching management within nested blocks.    - **Mismanagement Relation:** Confirms that mixed branching does not disrupt nested block management, leading to unintended behavior.

(assert_invalid
  (module
    (type $sig (func (param i32) (result i32)))
    (table 1 funcref)
    (elem (i32.const 0) $f)
    (func $f (param i32) (result i32) (i32.add (local.get 0) (i32.const 1)))
    (func $test
      (block
        (loop
          (block
            (br 1)
            (call_indirect (type $sig) (i32.const 0) (i32.const 0))
          )
          (br_table 0 0 (i32.const 1))
          (call_indirect (type $sig) (i32.const 0) (i32.const 0))
        )
      )
    )
  )
  "type mismatch"
)